kubernetes/apps/default/radarr/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app.kubernetes.io/instance: radarr
    app.kubernetes.io/name: radarr
spec:
  replicas: 1
  revisionHistoryLimit: 0
  serviceName: "radarr"
  selector:
    matchLabels:
      app.kubernetes.io/instance: radarr
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: radarr
        app.kubernetes.io/name: radarr
    spec:
      restartPolicy: Always
      terminationGracePeriodSeconds: 10
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: share
          nfs:
            server: openmediavault.oyoy.lan
            path: /storage
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 7878
              name: http
          volumeMounts:
            - name: config
              mountPath: /config
            - name: share
              mountPath: /share
